# sensei-monorepo

./: README.md
sencore/: .gitignore  CLAUDE.md  Cargo.toml
sencore/docs/: builtins.md  evaluation-spec.md  s-expression-ast-format.md
sencore/examples/: abi-encode.sen  abi-size-helpers.sen  generic-array.sen  mem-embed-unroll.sen  runtime-mem.sen  simple-or-eval.sen  test-broken-partial-app.sen  todo-abi-encode.sen
sencore/src/: ast.rs  comptime_value.rs  errors.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  pretty.rs  span.rs
sensei-tree-sitter/: grammar-desc.md  grammar.js
sensei-tree-sitter/src/: grammar.json  node-types.json  parser.c
senseic/: CLAUDE.md  Cargo.toml  PARSER_PRD.json
senseic/.claude/skills/parser-engineer/: SKILL.md
senseic/crates/cli/src/: main.rs
senseic/crates/data/src/: bigint.rs  index.rs  index_vec.rs  lib.rs  span.rs
senseic/crates/parser/: Cargo.toml
senseic/crates/parser/src/: ast.rs  cst.rs  diagnostics.rs  display.rs  lexer.rs  lib.rs  parser.rs  testing.rs  ts_parser.rs
senseic/crates/parser/src/cst/: mod.rs
senseic/crates/parser/src/tests/: errorless.rs  mod.rs  parser.rs
senseic/crates/sensei-core/: Cargo.toml
senseic/crates/sensei-core/src/: index.rs  index_vec.rs  lib.rs  must_use.rs  span.rs
senseic/docs/: Grammar.md
senseic/examples/: basic-001.sen  basic-002.sen
senseic/frontend/cli/: Cargo.toml
senseic/frontend/cli/src/: main.rs
senseic/frontend/data/: Cargo.toml
senseic/frontend/data/src/: index_vec.rs  span.rs
senseic/frontend/parser/: Cargo.toml
senseic/frontend/parser/src/: ast.rs  const_print.rs  error_report.rs  lexer.rs  lib.rs  parser.rs
senseic/frontend/parser/src/cst/: display.rs  mod.rs
senseic/frontend/parser/src/tests/: errorless.rs  resiliency.rs
senseic/sir/: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  run-tests.sh
senseic/sir/crates/analyses/: Cargo.toml
senseic/sir/crates/analyses/src/: basic_block_ownership.rs  cfg_in_out_bundling.rs  lib.rs
senseic/sir/crates/assembler/: Cargo.toml
senseic/sir/crates/assembler/src/: lib.rs  op.rs
senseic/sir/crates/cli/: Cargo.toml
senseic/sir/crates/cli/src/: main.rs
senseic/sir/crates/data/: Cargo.toml
senseic/sir/crates/data/src/: builder.rs  index.rs  lib.rs
senseic/sir/crates/data/src/operation/: mod.rs  op_data.rs  op_fmt.rs
senseic/sir/crates/debug-backend/: Cargo.toml
senseic/sir/crates/debug-backend/src/: lib.rs  operations.rs  static_memory_layout.rs
senseic/sir/crates/optimizations/: Cargo.toml
senseic/sir/crates/optimizations/src/: constant_propagation.rs  copy_propagation.rs  lib.rs
senseic/sir/crates/parser/: Cargo.toml
senseic/sir/crates/parser/src/: emit.rs  lexer.rs  lib.rs  parser.rs
senseic/sir/docs/: README.md  evm_opcodes_and_precompiles.md  ir_text_format.md  opcode_fork_mapping.md
senseic/sir/sir-solidity-diff-tests/src/: ArithmeticLogic.sol  CopyPropBranch.sol  CopyPropSwitch.sol  FollowTheList.sol  SimpleAdd.sol  arithmetic_logic.sir  copy_prop_branch.sir  copy_prop_switch.sir  follow_the_list.sir  simple_add.sir  simple_data_ret.sir  switch_bug.sir
senseic/sir/sir-solidity-diff-tests/test/: ArithmeticLogic.t.sol  BaseTest.sol  CopyPropagation.t.sol  FollowTheList.t.sol  SimpleAdd.t.sol  SimpleDataRet.t.sol  SwitchBug.t.sol
senseic/sir/test-utils/: Cargo.toml
senseic/sir/test-utils/src/: lib.rs
