[workspace]
resolver = "2"
members = ["crates/*", "test-utils"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
sir-data = { path = "crates/data" }
sir-analyses = { path = "crates/analyses" }
sir-parser = { path = "crates/parser" }
sir-assembler = { path = "crates/assembler" }

smallvec = "1.15.1"
alloy-primitives = "1.1.2"
thiserror = "2.0.17"
bumpalo = {version = "3.19.0", features=["collections"]}
