[package]
name = "neosen-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
neosen-data.workspace = true

bumpalo = {workspace = true, features = ["allocator-api2", "collections"]}
allocator-api2.workspace = true
hashbrown.workspace = true
tree-sitter = "0.25"
tree-sitter-sensei = { path = "../../../sensei-tree-sitter/" }
inturn.workspace = true
smallvec.workspace = true
logos = "0.16.0"

[dev-dependencies]
pretty_assertions.workspace = true
