[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logos = "0.15.1"
chumsky = "0.11.1"
bumpalo = {version = "3.19.0", features=["collections"]}
smallvec = "1.15.1"
sir-data.workspace = true
alloy-primitives.workspace = true
sir-analyses.workspace = true
